# mantenimicros-email-automation

./: .dockerignore  .env.example  .gitignore  Dockerfile  GUÍA_SETUP_ES.md  README.md  pyproject.toml
src/email_automation/: __init__.py  app.py  auth.py  config.py  db.py  models.py  reset_db.py  schemas.py
src/email_automation/services/: attachments.py  classification.py  intake.py  matching.py  microsoft_graph.py  openrouter.py  telegram_bot.py
tests/: test_matching.py
